--- a/resources/css/filament/user/theme.css
+++ b/resources/css/filament/user/theme.css
@@ -4,8 +4,16 @@
 @source '../../../../app/Filament/User/**/*';
 @source '../../../../resources/views/filament/user/**/*';
 
-@import '../user/topbar.css';
+/* @import '../user/topbar.css'; */
 
 .fi-body {
     @apply bg-gray-100 dark:bg-gray-900 border-none;
+}
+
+/* ──────────────────────────────────────────────
+   PAGE MAIN CARD
+   ────────────────────────────────────────────── */
+
+.fi-page-main {
+    @apply p-4 rounded-lg bg-white border border-zinc-200 shadow-zinc-900/50 dark:bg-zinc-900 dark:border-zinc-800;
 }
